// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PokemonCard Rendering should match to snapshot loaded 1`] = `
<Fragment>
  <Styled(View)
    color="#5DBE62"
  >
    <Styled(View)>
      <Styled(Component)>
        <SvgMock
          color="#FFF"
          height={30}
          width={30}
        />
      </Styled(Component)>
    </Styled(View)>
    <Styled(View)>
      <Styled(Image)
        resizeMode="contain"
        source={
          Object {
            "uri": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png",
          }
        }
      />
      <Styled(View) />
    </Styled(View)>
  </Styled(View)>
  <ScrollView
    scrollIndicatorInsets={
      Object {
        "right": 1,
      }
    }
  >
    <Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <Styled(Text)>
            64 XP
          </Styled(Text)>
        </Styled(View)>
        <Styled(View)>
          <Styled(Text)>
            bulbasaur
          </Styled(Text)>
          <Styled(Text)>
            #1
          </Styled(Text)>
        </Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <SvgMock
              color="#333"
              height={28}
              width={28}
            />
            <Styled(Text)>
              7
            </Styled(Text)>
          </Styled(View)>
          <Styled(View)>
            <SvgMock
              color="#333"
              height={23}
              width={23}
            />
            <Styled(Text)>
              69
            </Styled(Text)>
          </Styled(View)>
        </Styled(View)>
        <Styled(View)>
          <Styled(Text)>
            species: bulbasaur
          </Styled(Text)>
        </Styled(View)>
        <TypeSection
          types={
            Array [
              Object {
                "slot": 1,
                "type": Object {
                  "name": "grass",
                  "url": "https://pokeapi.co/api/v2/type/12/",
                },
              },
              Object {
                "slot": 2,
                "type": Object {
                  "name": "poison",
                  "url": "https://pokeapi.co/api/v2/type/4/",
                },
              },
            ]
          }
        />
        <Styled(View) />
        <Styled(Text)>
          Stats
        </Styled(Text)>
        <StatSection
          stats={
            Array [
              Object {
                "base_stat": 45,
                "effort": 0,
                "stat": Object {
                  "name": "hp",
                  "url": "https://pokeapi.co/api/v2/stat/1/",
                },
              },
              Object {
                "base_stat": 49,
                "effort": 0,
                "stat": Object {
                  "name": "attack",
                  "url": "https://pokeapi.co/api/v2/stat/2/",
                },
              },
              Object {
                "base_stat": 49,
                "effort": 0,
                "stat": Object {
                  "name": "defense",
                  "url": "https://pokeapi.co/api/v2/stat/3/",
                },
              },
              Object {
                "base_stat": 65,
                "effort": 1,
                "stat": Object {
                  "name": "special-attack",
                  "url": "https://pokeapi.co/api/v2/stat/4/",
                },
              },
              Object {
                "base_stat": 65,
                "effort": 0,
                "stat": Object {
                  "name": "special-defense",
                  "url": "https://pokeapi.co/api/v2/stat/5/",
                },
              },
              Object {
                "base_stat": 45,
                "effort": 0,
                "stat": Object {
                  "name": "speed",
                  "url": "https://pokeapi.co/api/v2/stat/6/",
                },
              },
            ]
          }
        />
        <Styled(View) />
        <Styled(Text)>
          Abilities
        </Styled(Text)>
        <AbilitySection
          abilities={
            Array [
              Object {
                "ability": Object {
                  "name": "overgrow",
                  "url": "https://pokeapi.co/api/v2/ability/65/",
                },
                "is_hidden": false,
                "slot": 1,
              },
              Object {
                "ability": Object {
                  "name": "chlorophyll",
                  "url": "https://pokeapi.co/api/v2/ability/34/",
                },
                "is_hidden": true,
                "slot": 3,
              },
            ]
          }
        />
        <Styled(View) />
        <Styled(Text)>
          Forms
        </Styled(Text)>
        <FormSection
          forms={
            Array [
              Object {
                "name": "bulbasaur",
                "url": "https://pokeapi.co/api/v2/pokemon-form/1/",
              },
            ]
          }
        />
      </Styled(View)>
    </Styled(View)>
  </ScrollView>
</Fragment>
`;

exports[`PokemonCard Rendering should match to snapshot loading 1`] = `
<ActivityIndicator
  animating={true}
  color="red"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`PokemonCard Rendering should match to snapshot with Pokemon without a type 1`] = `
<Fragment>
  <Styled(View)
    color="#f00"
  >
    <Styled(View)>
      <Styled(Component)>
        <SvgMock
          color="#FFF"
          height={30}
          width={30}
        />
      </Styled(Component)>
    </Styled(View)>
    <Styled(View)>
      <Styled(Image)
        resizeMode="contain"
        source={
          Object {
            "uri": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png",
          }
        }
      />
      <Styled(View) />
    </Styled(View)>
  </Styled(View)>
  <ScrollView
    scrollIndicatorInsets={
      Object {
        "right": 1,
      }
    }
  >
    <Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <Styled(Text)>
            64 XP
          </Styled(Text)>
        </Styled(View)>
        <Styled(View)>
          <Styled(Text)>
            bulbasaur
          </Styled(Text)>
          <Styled(Text)>
            #1
          </Styled(Text)>
        </Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <SvgMock
              color="#333"
              height={28}
              width={28}
            />
            <Styled(Text)>
              7
            </Styled(Text)>
          </Styled(View)>
          <Styled(View)>
            <SvgMock
              color="#333"
              height={23}
              width={23}
            />
            <Styled(Text)>
              69
            </Styled(Text)>
          </Styled(View)>
        </Styled(View)>
        <Styled(View)>
          <Styled(Text)>
            species: bulbasaur
          </Styled(Text)>
        </Styled(View)>
        <TypeSection
          types={Array []}
        />
        <Styled(View) />
        <Styled(Text)>
          Stats
        </Styled(Text)>
        <StatSection
          stats={
            Array [
              Object {
                "base_stat": 45,
                "effort": 0,
                "stat": Object {
                  "name": "hp",
                  "url": "https://pokeapi.co/api/v2/stat/1/",
                },
              },
              Object {
                "base_stat": 49,
                "effort": 0,
                "stat": Object {
                  "name": "attack",
                  "url": "https://pokeapi.co/api/v2/stat/2/",
                },
              },
              Object {
                "base_stat": 49,
                "effort": 0,
                "stat": Object {
                  "name": "defense",
                  "url": "https://pokeapi.co/api/v2/stat/3/",
                },
              },
              Object {
                "base_stat": 65,
                "effort": 1,
                "stat": Object {
                  "name": "special-attack",
                  "url": "https://pokeapi.co/api/v2/stat/4/",
                },
              },
              Object {
                "base_stat": 65,
                "effort": 0,
                "stat": Object {
                  "name": "special-defense",
                  "url": "https://pokeapi.co/api/v2/stat/5/",
                },
              },
              Object {
                "base_stat": 45,
                "effort": 0,
                "stat": Object {
                  "name": "speed",
                  "url": "https://pokeapi.co/api/v2/stat/6/",
                },
              },
            ]
          }
        />
        <Styled(View) />
        <Styled(Text)>
          Abilities
        </Styled(Text)>
        <AbilitySection
          abilities={
            Array [
              Object {
                "ability": Object {
                  "name": "overgrow",
                  "url": "https://pokeapi.co/api/v2/ability/65/",
                },
                "is_hidden": false,
                "slot": 1,
              },
              Object {
                "ability": Object {
                  "name": "chlorophyll",
                  "url": "https://pokeapi.co/api/v2/ability/34/",
                },
                "is_hidden": true,
                "slot": 3,
              },
            ]
          }
        />
        <Styled(View) />
        <Styled(Text)>
          Forms
        </Styled(Text)>
        <FormSection
          forms={
            Array [
              Object {
                "name": "bulbasaur",
                "url": "https://pokeapi.co/api/v2/pokemon-form/1/",
              },
            ]
          }
        />
      </Styled(View)>
    </Styled(View)>
  </ScrollView>
</Fragment>
`;
